--- a/src/view/cryptos/sell.phtml
+++ b/src/view/cryptos/sell.phtml
@@ -7,7 +7,7 @@ require_once(__DIR__ . '/../common/header.phtml'); ?>
         <h3>Sell <?= $this->cryptocurrency->getName() ?> (<?= $this->cryptocurrency->getSymbol() ?>)</h3>
         <form method="post" action="/cryptos/sell/<?= $this->cryptocurrency->getId() ?>">
             <div class="form-group">
-                <input type="text" class="form-control" id="amount" placeholder="Amount" name="amount">
+                <input type="text" class="form-control" id="amount" placeholder="Amount" name="amount" required>
             </div>
             <button type="submit" class="btn btn-success">Sell</button>
         </form>
